# k3s-lab

./: .gitignore  CREDENTIALS-AND-ACCESS.md  DAY5-COMPLETION-SUMMARY.md  PROJECT_STRUCTURE.md  README.md  create-realm.sh  mock-jwks-server.py  test-oidc-integration.sh  test-oidc.sh
ansible/: ansible.cfg  deploy-core-services.yml  inventory  inventory.backup  k3s-setup.yml  pre-pull-images.yml  registry-setup.yml  requirements.yml
docs/: architecture.md  authentication.md  day1-2-setup.md  day3-4-setup.md  gitops-pipeline.md  how-to-reproduce.md  infrastructure-story.md  yaml-jokes.md
hello-world-app/: Cargo.toml  Dockerfile
k8s/: configmap.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  rust-api-deployment.yaml  secret.yaml
rust-api/: Cargo.toml  Dockerfile  PRODUCTION.md  README.md  deploy-prod.sh  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  env.example  env.production  setup.sh  test_api.sh
rust-api/init-scripts/: 01-init.sql
rust-api/migrations/2024_01_01_000001_create_users_and_tasks/: down.sql  up.sql
rust-api/nginx/: nginx.conf
rust-api/src/: auth.rs  db.rs  main.rs  models.rs  schema.rs
rust-api/src/handlers/: auth.rs  health.rs  mod.rs  oidc.rs  tasks.rs  users.rs
scripts/: build-and-test.sh  check-vms.sh  day5-containerize.sh  deploy-day3-4.sh  deploy-direct.sh  deploy-infrastructure.sh  deploy-multipass-fixed.sh  deploy-multipass-infrastructure.sh  deploy-multipass-simple.sh  deploy-simple.sh  get-credentials.sh  get-kubeconfig.sh  port-forward-ingress.sh  quick-setup.sh  setup-ssh.sh  (+5 more)
(+36 files in other folders)
